[tool.poetry]
name = "cesar"
version = "0.1.0"
description = "Implementação da cifra de cesar"
authors = ["Silvério Simões <silverio.simoes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
blue = "^0.9.0"
isort = "^5.10.1"
mkdocs = "^1.3.1"
prospector = "^1.7.7"
pip-audit = "^2.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
